# rusty-dusty

./: README.md  build-wasm.sh  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
src/: App.svelte  index.ts  style.css  types.ts
src/lib/: Canvas.svelte  KindButton.svelte
wasm-crate/: Cargo.toml
wasm-crate/src/: cells.rs  lib.rs  utils.rs
