[package]
name = "wasm-crate"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
] }

hashbrown = { version = "^0.14.2", features = ["raw"] }

# rand = { version = "0.8", default-features = false, features = [
#     "std",
#     "getrandom",
# ] }
# getrandom = { version = "0.2", features = ["js"] }
fastrand = "2.3"

# nalgebra = "0.29"
vector2d = "3.1"

# wgpu stuff
# winit = { version = "0.29", features = ["rwh_05"] }
# env_logger = "0.10"
# log = "0.4"
# wgpu = "24.0"
